# guhwall

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  go.mod  go.sum  guhwall  guhwall-apply  guhwall.desktop  index.html  install.sh  main.go  main.js  package-lock.json  package.json  pywal16-gtk.sh  renderer.js  styles.css
src/: main.rs
