[package]
name = "guhwall"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.19"
gio = "0.19"
async-channel = "2.1"
image = "0.24"
rayon = "1.8" # <--- THE FIX
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
walkdir = "2.4"
rand = "0.8"
once_cell = "1.19"
anyhow = "1.0"
